temp fix iPhoneX modal landscape img overflow (orient: landscape) - MacBook

--- a/src/styles/modal-portrait-small.css
+++ b/src/styles/modal-portrait-small.css
@@ -297,6 +297,10 @@
     .modal-img-container {
         position: relative;
         width: 38%;
+
+        /* overflow: hidden; */
+        /* max-height: 300px; */
+        /* border: 2px solid red; */
     }
 
     .thumbnail-container {
@@ -306,5 +310,45 @@
     .thumbnail-container .thumbnail-div {
         width: 32%;
         margin: 0px 1px;
+    }
+}
+
+/* iPhoneX ADJUSTMENTS  FOR OVERFLOWING IMAGES IN LANDSCAPE MODAL */
+@media only screen and (orientation: landscape) and (min-width: 812px) and (max-width: 1399px) and (max-height: 375px) {
+
+    .modal-img-container {
+        /* position: relative; */
+        /* width: 38%; */
+        overflow: hidden;
+        max-height: 350px;
+        /* border: 2px solid red; */
+    }
+
+    .thumbnail-container {
+        width: 38%;
+        max-height: 350px;
+        overflow: auto;
+        /* border: 2px solid red; */
+    }
+
+    /*  HIDE OVERFLOW OF THUMBNAIL IMG CONTAINERS */
+    .thumbnail-container .thumbnail-div {
+        width: 32%;
+        /* !!! PERCENT MAX HEIGHT WONT APPLY !!! */
+        /* max-height: 33%; */
+
+        /*  SET MAX HEIGHT AND HIDE OVERFLOW OF THUMBNAIL IMG CONTAINERS */
+        max-height: 112px;
+        overflow: hidden;
+
+        /* border: 1px solid orange; */
+    }
+
+    img.thumbnail-image {
+        width: 100%;
+        /* margin: 2px; */
+       
+        opacity: 0.6;
+        /* border: 3px solid rgb(34, 219, 157); */
     }
 }
